--- a/markdown/blogs/blog-example-with-mdx-file.mdx
+++ b/markdown/blogs/blog-example-with-mdx-file.mdx
@@ -1,6 +1,6 @@
 ---
-title: Blog Example with MDX
-excerpt: Blog Example with MDX That Comes with Templates
+title: Smart Contracts Made For You
+excerpt: ⚖️ Smart contracts that don’t smell like lawyer cologne. Choose your smart contract, choose your fate, change it as you grow."
 date: 2025-12-24
 coverImage: /images/blog/blog-02.jpg
 author: Musharof
