--- a/markdown/blogs/contact-form.mdx
+++ b/markdown/blogs/contact-form.mdx
@@ -1,6 +1,6 @@
 ---
-title: Configuring Contact Form
-excerpt: Configuring Contact Form That Comes with Templates
+title: Built in Royalty Tracking
+excerpt: 💰 Follow the money like it owes you brunch. One stop automatic tracking for every AI-generated podcast cameo, chatbot moment, and audio narration payment that comes in.
 date: 2025-12-24
 coverImage: /images/blog/blog-02.jpg
 author: Shafiq Hammad
